Fix nav stacking on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -45,6 +45,7 @@
 
     @include media-query($on-palm) {
         position: absolute;
+        z-index: 2;
         top: 9px;
         right: $spacing-unit / 2;
         background-color: $light-blue;
